// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AMP Media Article Page A11y I can see the skip to content link 1`] = `"Waka go wetin de inside"`;

exports[`AMP Media Article Page AMP Geo config 1`] = `"{"AmpBind":true,"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"],"gbOrUnknown":["gb","gg","im","je","uk","unknown"]}}"`;

exports[`AMP Media Article Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net/hit.xiti?",
    "pageview": [
      {
        "s": "598343",
      },
      {
        "s2": "70",
      },
      {
        "p": "pidgin.articles.cw0x29n2pvqo.page",
      },
      {
        "r": "\${screenWidth}x\${screenHeight}x\${screenColorDepth}",
      },
      {
        "re": "\${availableScreenWidth}x\${availableScreenHeight}",
      },
      {
        "hl": "\${timestamp}",
      },
      {
        "lng": "\${browserLanguage}",
      },
      {
        "x1": "[urn:bbc:optimo:asset:cw0x29n2pvqo]",
      },
      {
        "x2": "[amp]",
      },
      {
        "x3": "[news-pidgin]",
      },
      {
        "x4": "[pcm]",
      },
      {
        "x5": "[\${sourceUrl}]",
      },
      {
        "x6": "[\${documentReferrer}]",
      },
      {
        "x7": "[article-sfv]",
      },
      {
        "x8": "[simorgh]",
      },
      {
        "x9": "[Nigeria%202023%20elections:%20INEC%20Chairman%20Mahmood%20Yakubu%20rule%20out%20postponement,%20tok%20about%20preparations%20for%20di%20polls]",
      },
      {
        "x11": "[2023-01-20T09:43:06.574Z]",
      },
      {
        "x12": "[2023-01-20T09:43:06.574Z]",
      },
      {
        "x13": "[Nigeria~Politics~Nigeria+politics~Nigerian+elections+2023]",
      },
      {
        "x14": "[3d5d5e30-dd50-4041-96d5-c970b20005b9~75612fa6-147c-4a43-97fa-fcf70d9cced3~7d65828a-85c1-41f4-96cf-c758da75e401~ad97dddb-ea75-4493-a4ed-95ad1477049f]",
      },
      {
        "x17": "[Nigeria~Politics~Nigeria+politics~Nigerian+elections+2023]",
      },
      {
        "ref": "\${documentReferrer}",
      },
    ],
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Media Article Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "article-sfv",
    "domain": "test.bbc.co.uk",
    "sections": "Pidgin, Pidgin - video",
    "title": "Nigeria 2023 elections: INEC Chairman Mahmood Yakubu rule out postponement, tok about preparations for di polls",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Media Article Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Pidgin",
  "url": "/pidgin",
}
`;

exports[`AMP Media Article Page Footer Anchors should match text and url 2`] = `
{
  "text": "Why you fit trust BBC News",
  "url": "https://www.bbc.com/pidgin/institutional-48528766",
}
`;

exports[`AMP Media Article Page Footer Anchors should match text and url 3`] = `
{
  "text": "How dem dey take use am",
  "url": "https://www.bbc.com/usingthebbc/terms/",
}
`;

exports[`AMP Media Article Page Footer Anchors should match text and url 4`] = `
{
  "text": "As e concern BBC",
  "url": "https://www.bbc.com/aboutthebbc",
}
`;

exports[`AMP Media Article Page Footer Anchors should match text and url 5`] = `
{
  "text": "Privacy Policy",
  "url": "https://www.bbc.com/usingthebbc/privacy/",
}
`;

exports[`AMP Media Article Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Media Article Page Footer Anchors should match text and url 7`] = `
{
  "text": "Call BBC",
  "url": "https://www.bbc.co.uk/pidgin/send/u50853577",
}
`;

exports[`AMP Media Article Page Footer Anchors should match text and url 8`] = `
{
  "text": "BBC News for oda languages",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`AMP Media Article Page Footer Anchors should match text and url 9`] = `
{
  "text": "De way wey we de take go external link.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`AMP Media Article Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pidgin"`;

exports[`AMP Media Article Page Footer Paragraphs should match text 1`] = `"© 2025 BBC. De external site no concern BBC. De way wey we de take go external link."`;

exports[`AMP Media Article Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Pidgin",
  "svg": <path
    d="M759.928 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.003V159.452h23.192a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.267 36.647v-72.699h22.003V265.75h-23.193zM804.186 159.452h73.146v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.075v19.03h-75.97V159.451zM982.1 265.75a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.44-35.977 2391.54 2391.54 0 01-9.218 35.977 2452.296 2452.296 0 01-9.812 35.978h-24.233a2032.839 2032.839 0 01-14.57-52.628c-4.66-17.74-9.068-35.63-13.231-53.67h24.976a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.771 40.586 3259.894 3259.894 0 0018.881-77.456h22.3a3251.95 3251.95 0 0018.733 75.821 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.438h24.53a1845.28 1845.28 0 01-13.23 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zM1077.47 267.98c-5.848 0-11.62-.645-17.32-1.932a66.227 66.227 0 01-16.427-6.096v-20.516c10.604 6.444 21.854 9.663 33.748 9.663 6.739 0 11.868-1.138 15.387-3.419 3.517-2.28 5.278-5.45 5.278-9.515 0-3.07-.869-5.475-2.602-7.21-1.735-1.733-4.04-3.122-6.913-4.163-2.876-1.04-6.095-2.007-9.663-2.899-5.85-1.387-11.002-2.974-15.462-4.757-4.46-1.784-8.228-3.889-11.299-6.319-3.073-2.427-5.403-5.352-6.987-8.771-1.587-3.42-2.38-7.508-2.38-12.265 0-6.74 1.71-12.537 5.13-17.395 3.42-4.855 8.251-8.597 14.495-11.225 6.244-2.624 13.678-3.939 22.3-3.939 5.65 0 11.2.646 16.652 1.933 5.45 1.289 10.355 3.024 14.718 5.203v20.22c-4.363-2.677-9.292-4.758-14.793-6.245-5.5-1.487-11.027-2.23-16.576-2.23-6.047 0-10.73 1.04-14.05 3.122-3.321 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.98 2.379 6.616 1.584 1.635 3.84 2.973 6.764 4.014 2.922 1.04 6.367 2.058 10.333 3.047 5.054 1.29 9.76 2.702 14.123 4.238 4.36 1.537 8.2 3.493 11.522 5.872 3.32 2.379 5.895 5.403 7.73 9.069 1.834 3.668 2.75 8.177 2.75 13.529 0 7.038-1.734 13.06-5.202 18.063-3.47 5.006-8.475 8.823-15.016 11.447-6.541 2.626-14.42 3.94-23.638 3.94z"
  />,
}
`;

exports[`AMP Media Article Page Header Navigation link should match text and url 1`] = `
{
  "text": "Home",
  "url": "/pidgin",
}
`;

exports[`AMP Media Article Page Header Navigation link should match text and url 2`] = `
{
  "text": "Nigeria",
  "url": "/pidgin/topics/c2dwqd1zr92t",
}
`;

exports[`AMP Media Article Page Header Navigation link should match text and url 3`] = `
{
  "text": "Africa",
  "url": "/pidgin/topics/c404v061z85t",
}
`;

exports[`AMP Media Article Page Header Navigation link should match text and url 4`] = `
{
  "text": "World",
  "url": "/pidgin/topics/c0823e52dd0t",
}
`;

exports[`AMP Media Article Page Header Navigation link should match text and url 5`] = `
{
  "text": "Video",
  "url": "/pidgin/topics/c3l19z3k1ert",
}
`;

exports[`AMP Media Article Page Header Navigation link should match text and url 6`] = `
{
  "text": "Sport",
  "url": "/pidgin/topics/cjgn7gv77vrt",
}
`;

exports[`AMP Media Article Page Header Navigation link should match text and url 7`] = `
{
  "text": "Entertainment",
  "url": "/pidgin/topics/cqywjyzk2vyt",
}
`;

exports[`AMP Media Article Page Header Navigation link should match text and url 8`] = `
{
  "text": "Most popular",
  "url": "/pidgin/popular/read",
}
`;

exports[`AMP Media Article Page Latest Media should match text and url 1`] = `
{
  "text": "Video, How to vote for Nigeria general election, Duration 1,46",
  "url": "/pidgin/tori-64758904",
}
`;

exports[`AMP Media Article Page Latest Media should match text and url 2`] = `
{
  "text": "Video, Wetin e take to win election for Nigeria, Duration 3,59",
  "url": "/pidgin/64626014",
}
`;

exports[`AMP Media Article Page Latest Media should match text and url 3`] = `
{
  "text": "Video, Tins you go do during election wey go land you for INEC hot soup, Duration 1,33",
  "url": "/pidgin/tori-64534844",
}
`;

exports[`AMP Media Article Page Latest Media should match text and url 4`] = `
{
  "text": "Video, 'We dey good to go for dis election' - INEC Boss, Duration 6,17",
  "url": "/pidgin/articles/cw0x29n2pvqo",
}
`;

exports[`AMP Media Article Page Main heading should match text 1`] = `"'We dey good to go for dis election' - INEC Boss"`;

exports[`AMP Media Article Page Related Content should match text and url 1`] = `
{
  "text": "Key tins wey INEC chairman Mahmood Yakubu tok for Chattam house about 2023 elections",
  "url": "/pidgin/articles/cgrznj8yg5do",
}
`;

exports[`AMP Media Article Page Related Content should match text and url 2`] = `
{
  "text": "PDP fire back afta APC call for di prosecution of Atiku for corruption",
  "url": "/pidgin/articles/c1w09yl32yeo",
}
`;

exports[`AMP Media Article Page Related Content should match text and url 3`] = `
{
  "text": "Security go be one of my biggest priority - Kwankwaso ",
  "url": "/pidgin/articles/cl519qjj0lvo",
}
`;

exports[`AMP Media Article Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/pidgin/images/icons/icon-192x192.png",
}
`;

exports[`AMP Media Article Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-152x152.png",
}
`;

exports[`AMP Media Article Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-180x180.png",
}
`;

exports[`AMP Media Article Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-384x384.png",
}
`;

exports[`AMP Media Article Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-512x512.png",
}
`;

exports[`AMP Media Article Page SEO Canonical link 1`] = `"http://localhost:7081/pidgin/articles/cw0x29n2pvqo"`;

exports[`AMP Media Article Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Media Article Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Media Article Page SEO Heading level 1 1`] = `"'We dey good to go for dis election' - INEC Boss"`;

exports[`AMP Media Article Page SEO Lang attribute 1`] = `"pcm"`;

exports[`AMP Media Article Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "about": [
        {
          "@type": "Place",
          "name": "Nigeria",
        },
        {
          "@type": "Thing",
          "name": "Politics",
          "sameAs": [
            "http://dbpedia.org/resource/Politics",
          ],
        },
        {
          "@type": "Thing",
          "name": "Nigeria politics",
          "sameAs": [
            "http://dbpedia.org/resource/Politics_of_Nigeria",
          ],
        },
        {
          "@type": "Thing",
          "name": "Nigerian Presidential Election 2023",
          "sameAs": [
            "http://dbpedia.org/resource/2023_Nigerian_general_election",
          ],
        },
      ],
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
          "width": 1024,
        },
        "name": "BBC News Pidgin",
        "noBylinesPolicy": "https://www.bbc.com/pidgin/institutional-48528766#authorexpertise",
      },
      "dateModified": "2023-01-20T09:43:06.574Z",
      "datePublished": "2023-01-20T09:43:06.574Z",
      "headline": "Nigeria 2023 elections: INEC Chairman Mahmood Yakubu rule out postponement, tok about preparations for di polls",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_pidgin/1a8b/live/c4ce3eb0-98a5-11ed-86bf-4b2f5da2cf01.jpg",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "pcm",
        "name": "Nigerian Pidgin",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/pidgin/articles/cw0x29n2pvqo",
        "@type": "WebPage",
        "name": "Nigeria 2023 elections: INEC Chairman Mahmood Yakubu rule out postponement, tok about preparations for di polls",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
          "width": 1024,
        },
        "name": "BBC News Pidgin",
        "publishingPrinciples": "https://www.bbc.com/pidgin/institutional-48528766",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_pidgin/1a8b/live/c4ce3eb0-98a5-11ed-86bf-4b2f5da2cf01.jpg",
      "url": "http://localhost:7081/pidgin/articles/cw0x29n2pvqo",
    },
  ],
}
`;

exports[`AMP Media Article Page SEO Linked data should match text 2`] = `
{
  "@context": "http://schema.org",
  "@type": "VideoObject",
  "description": "INEC boss interview",
  "duration": "PT6M17S",
  "embedURL": "https://www.test.bbc.com/ws/av-embeds/articles/cw0x29n2pvqo/p0dxnwb5/pcm",
  "name": "INEC",
  "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p0dxnxnv.jpg",
  "uploadDate": "2023-01-20T09:07:40.000Z",
}
`;

exports[`AMP Media Article Page SEO OG description 1`] = `"Professor Mahmood Yakubu speak wit BBC on Inec plans to conduct free and fair elections."`;

exports[`AMP Media Article Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_pidgin/1a8b/live/c4ce3eb0-98a5-11ed-86bf-4b2f5da2cf01.jpg"`;

exports[`AMP Media Article Page SEO OG image alt 1`] = `"Inec boss Prof. Mahmood Yakubu"`;

exports[`AMP Media Article Page SEO OG locale 1`] = `"pcm"`;

exports[`AMP Media Article Page SEO OG site name 1`] = `"BBC News Pidgin"`;

exports[`AMP Media Article Page SEO OG title 1`] = `"Nigeria 2023 elections: INEC Chairman Mahmood Yakubu rule out postponement, tok about preparations for di polls - BBC News Pidgin"`;

exports[`AMP Media Article Page SEO OG type 1`] = `"article"`;

exports[`AMP Media Article Page SEO OG url 1`] = `"http://localhost:7081/pidgin/articles/cw0x29n2pvqo"`;

exports[`AMP Media Article Page SEO Page title 1`] = `"Nigeria 2023 elections: INEC Chairman Mahmood Yakubu rule out postponement, tok about preparations for di polls - BBC News Pidgin"`;

exports[`AMP Media Article Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Media Article Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Media Article Page SEO Twitter creator 1`] = `"@BBCNews"`;

exports[`AMP Media Article Page SEO Twitter description 1`] = `"Professor Mahmood Yakubu speak wit BBC on Inec plans to conduct free and fair elections."`;

exports[`AMP Media Article Page SEO Twitter image alt 1`] = `"Inec boss Prof. Mahmood Yakubu"`;

exports[`AMP Media Article Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_pidgin/1a8b/live/c4ce3eb0-98a5-11ed-86bf-4b2f5da2cf01.jpg"`;

exports[`AMP Media Article Page SEO Twitter site 1`] = `"@BBCNews"`;

exports[`AMP Media Article Page SEO Twitter title 1`] = `"Nigeria 2023 elections: INEC Chairman Mahmood Yakubu rule out postponement, tok about preparations for di polls - BBC News Pidgin"`;

exports[`AMP Media Article Page Timestamp should match text and date 1`] = `
{
  "date": "2023-01-20",
  "text": "20 January 2023",
}
`;
